network/cilium/cilium/manifest/network-policies/same-namespace/allow-backend-from-frontend-ingress.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-frontend-to-backend
  namespace: applications
spec:
  endpointSelector: 
    matchLabels:
     app: backend-cilium-app
  ingress:
  - fromEndpoints:
    - matchLabels:
        app: frontend-cilium-app
