network/cilium/cilium/manifest/network-policies/same-namespace/allow-dns.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
 name: allow-dns
 namespace: applications
spec:
  endpointSelector: {}
  egress:
  - toEndpoints:
    - matchLabels:
       "k8s:io.kubernetes.pod.namespace": kube-system
    toPorts:
    - ports:
        - port: "53"
          protocol: ANY
      rules:
        dns:
        - matchPattern: "*"
