network/cilium/cilium/manifest/network-policies/same-namespace/default-deny.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
 name: default-deny
 namespace: applications
spec:
  endpointSelector: {}
  ingress:
  - {}
  egress:
  - {}
